# 1.20.19 (27680) 01-26-2009
> Changed default recording time from 30 to 15 seconds
> Removed the "Stop/Go" button below the remote control
> Added playback speed slider
> Compute velocity and acceleration as averages over 6 data points with slope of linear fit (as in rotation sim)
> Start the ladybug somewhere other than (0,0) so that the Remote Control position vector will be visible on startup
> Added return ladybug button
> Bigger circle in middle of remote control. Clicking anywhere on this circle sets vel or acc exactly to zero.
> Sim starts paused; starts recording when bug is moved
> Show acceleration and velocity even before 20 history points have been recorded
> The sim should be running on startup but not recording until the user moves the bug, uses the remote control or chooses a preset motion.
> Renamed "clear trace" to "clear" and made it clear history instead of just the graphical trace.
> The Ladybug should be smaller - more similar to size of bugs in Rotation.
> Fixed: - Vectors in remote are not sized to the same relative proportions as they are on the bug. For example, accel vector is very small on bug, very large in remote.
> Set circular motion speed so that dots match up exactly in trace
> Set elliptical motion speed so that dots match up exactly in trace
> Fixed: In linear mode, bug bounces off the walls at the wrong angles. Should bounce off at the same angle of incidence. That is, if it hits at 30 deg from perpendicular, it should bounce off at 30 deg from perpendicular in the other direction.
> Only record once bug is moved. So once out of playback mode, do not record until bug is grabbed. Regardless of how we handle the functionality of buttons.
> Centered coordinate frame, and added dynamic model bounds
> Fixed: (0,0) should be the middle of the screen instead of the middle of the box that fits on the left portion of the screen
> Fixed: Bug sometimes changes direction in the middle of the play area for no apparent reason.